--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "mobx": "^6.3.6",
+    "mobx-react-lite": "^3.2.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
